@@ -1,3 +1,8 @@
+Sun Sep  2 11:07:47 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
+
+	* sys/_syslib.s (__main): Let user specify their own name for
+	the dynamic area.
+
 Sat Sep  1 14:43:32 2001  Nick Burrett  <nick.burrett@btinternet.com>
 
 	* signal/_coredump.s (backtrace_remove_loop): Re-work restoring
